--- a/package.json
+++ b/package.json
@@ -9,18 +9,30 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-picker/picker": "^2.4.10",
+    "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/drawer": "^6.6.2",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
+    "@react-navigation/stack": "^6.3.16",
     "expo": "~48.0.6",
+    "expo-dev-client": "~2.1.6",
     "expo-status-bar": "~1.4.4",
     "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-native": "0.71.3",
+    "react-native-dropdown-picker": "^5.4.6",
+    "react-native-gesture-handler": "^2.9.0",
     "react-native-maps": "1.3.2",
-    "react-native-svg": "13.4.0",
+    "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
-    "expo-dev-client": "~2.1.6"
+    "react-native-screens": "~3.20.0",
+    "react-native-svg": "13.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/react": "~18.0.27",
+    "@types/react-native": "^0.71.5",
     "typescript": "^4.9.4"
   },
   "private": true
