--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.4.0",
     "expo": "~48.0.6",
     "expo-dev-client": "~2.2.1",
+    "expo-location": "~15.1.1",
     "expo-status-bar": "~1.4.4",
     "native-base": "^3.4.28",
     "react": "18.2.0",
@@ -29,6 +30,7 @@
     "react-native-gesture-handler": "^2.9.0",
     "react-native-maps": "1.3.2",
     "react-native-modal-datetime-picker": "^15.0.1",
+    "react-native-open-maps": "^0.4.2",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
