--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "react-dom": "^18.2.0",
     "react-native": "0.71.8",
     "react-native-dropdown-picker": "^5.4.6",
-    "react-native-gesture-handler": "^2.9.0",
+    "react-native-gesture-handler": "~2.9.0",
     "react-native-maps": "1.3.2",
     "react-native-modal-datetime-picker": "^15.0.1",
     "react-native-open-maps": "^0.4.2",
@@ -40,7 +40,8 @@
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.11",
     "react-redux": "^8.0.5",
-    "redux": "^4.2.1"
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
